--- a/models/03_doc2vec/word2vec-doc2vec-POS.ipynb
+++ b/models/03_doc2vec/word2vec-doc2vec-POS.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "True"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,18 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package tagsets to\n",
-      "[nltk_data]     /Users/pieterdelobelle/nltk_data...\n",
-      "[nltk_data]   Package tagsets is already up-to-date!\n",
-      "/usr/local/lib/python3.6/site-packages/sklearn/preprocessing/label.py:95: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  encode : bool, default False\n"
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/preprocessing/label.py:219: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
      ]
     }
    ],
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
